<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:imeOptions="actionGo"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Name"
            android:inputType="textCapWords	" />

        <TextView
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24dp"
            android:text="@string/add_whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            android:orientation="horizontal"

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:padding="16dp"
                android:text="0"
                android:textColor="@android:color/black"
                style="@style/HeaderTextStyle"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="49dp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"

                android:onClick="increment"
                android:text="+" />


        </LinearLayout>


        <Button
            android:id="@+id/BUTTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="116dp" />

    </LinearLayout>

</ScrollView>